GNOME Bugzilla – Bug 603027
"Manage favorites" dialog should skip accounts which don't support rooms
Last modified: 2011-01-10 10:02:23 UTC
As Cosimoc suggested in bug #586678.
Created attachment 177192 [details] [review] Showing only IRC accounts in Manage Favorites Account Chooser
Created attachment 177195 [details] [review] Corrected patch
Created attachment 177242 [details] [review] Show only accounts supporting chatrooms in Manage Favorites Account Chooser
I would move empathy_account_chooser_filter_supports_chatrooms() to empathy-chatrooms-window.c because it is not something we need in other places, unlike _filter_is_connected(). why did you rename "is_connected" boolean to "enabled"? is_connected seems better to me, you're not checking if the account is enabled. Otherwise this looks fine.
Created attachment 177265 [details] [review] fixed code reuse with a similar issue
Review of attachment 177265 [details] [review]: ::: libempathy-gtk/empathy-account-chooser.c @@ +975,3 @@ + data->callback (FALSE, data->user_data); + g_slice_free (FilterCallbackData, data); + } There is a missing return here. In the case it failed we shouldn't continue otherwise it will crash because data is freed.
Created attachment 177414 [details] [review] Corrected patch
Review of attachment 177414 [details] [review]: looks all good to me
merged to master. thanks! This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.