Skip accounts which don't support rooms in "Manage Favorites" dialog

Fixes: https://bugzilla.gnome.org/show_bug.cgi?id=603027