libempathy-gtk/empathy-account-chooser.h
@@ -91,6 +91,10 @@ void           empathy_account_chooser_filter_is_connected (TpAccount           
 							   EmpathyAccountChooserFilterResultCallback callback,
 							   gpointer               callback_data,
 							   gpointer               user_data);
+void           empathy_account_chooser_filter_supports_chatrooms (TpAccount       *account,
+							   EmpathyAccountChooserFilterResultCallback callback,
+							   gpointer               callback_data,
+							   gpointer               user_data);
 gboolean       empathy_account_chooser_is_ready (EmpathyAccountChooser *chooser);
 
 G_END_DECLS
